<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.krtonga.busbabe.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/interval_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Header1"
        android:text="@string/gps_time_interval"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/minute_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/interval_seconds"
        app:layout_constraintTop_toBottomOf="@+id/interval_header" />

    <EditText
        android:id="@+id/interval_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/minutes_default_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/interval_seconds"
        app:layout_constraintTop_toBottomOf="@+id/minute_header"/>

    <TextView
        android:id="@+id/second_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/interval_minutes"
        app:layout_constraintTop_toBottomOf="@+id/interval_header" />

    <EditText
        android:id="@+id/interval_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/seconds_default_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/interval_minutes"
        app:layout_constraintTop_toBottomOf="@+id/second_header" />

    <TextView
        android:id="@+id/phone_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Header1"
        android:text="@string/phone_number_label"
        android:paddingTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/interval_seconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_number_default_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_header" />

</android.support.constraint.ConstraintLayout>
